--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -7,9 +7,9 @@ on:
   pull_request:
 
 env:
-  TF_ORGANIZATION: "tastytap"
+  TF_ORGANIZATION: "${{ secrets.TF_ORGANIZATION }}"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "terraform-tastap-infra"
+  TF_WORKSPACE: "${{ secrets.TF_WORKSPACE }}"
   CONFIG_DIRECTORY: "./infra"
 
 jobs:
