update step debug variables

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -25,9 +25,9 @@ jobs:
       
     - name: Debug Variables
       run: |
-        echo "TF_ORGANIZATION: ${{ secrets.TF_ORGANIZATION }}"
+        echo "TF_ORGANIZATION: ${{ env.TF_ORGANIZATION }}"
         echo "TF_WORKSPACE: ${{ env.TF_WORKSPACE }}"
-        echo "TF_API_TOKEN is set: ${{ secrets.TF_API_TOKEN != '' }}"
+        echo "TF_API_TOKEN is set: ${{ env.TF_API_TOKEN != '' }}"
 
     - name: Upload Configuration
       uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.4
