--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -7,9 +7,9 @@ on:
   pull_request:
 
 env:
-  TF_ORGANIZATION: "tastytap"
+  TF_CLOUD_ORGANIZATION: "tastytap"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "terraform-tastytap-infra"
+  TF_WORKSPACE: "infra"
   CONFIG_DIRECTORY: "./infra"
 
 jobs:
