--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -9,7 +9,7 @@ on:
 env:
   TF_CLOUD_ORGANIZATION: "tastytap"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "infra"
+  TF_WORKSPACE: "terraform-tastytap-infra"
   CONFIG_DIRECTORY: "./infra"
 
 jobs:
@@ -34,7 +34,6 @@ jobs:
       id: plan-upload
       with:
         workspace: ${{ env.TF_WORKSPACE }}
-        organization: ${{ env.TF_CLOUD_ORGANIZATION }}
         directory: ${{ env.CONFIG_DIRECTORY }}
         speculative: true
         
