--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -28,6 +28,8 @@ jobs:
         echo "TF_ORGANIZATION: ${{ env.TF_CLOUD_ORGANIZATION }}"
         echo "TF_WORKSPACE: ${{ env.TF_WORKSPACE }}"
         echo "TF_API_TOKEN is set: ${{ env.TF_API_TOKEN != '' }}"
+    - name: List files in CONFIG_DIRECTORY
+      run: ls -la ${{ env.CONFIG_DIRECTORY }}
 
     - name: Upload Configuration
       uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.4
