update config in terraform plan to work in pull requests

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,16 +1,15 @@
 name: "Terraform Plan"
 
 on:
-  push:
+  pull_request:
     branches:
       - main
-  pull_request:
 
 env:
   TF_CLOUD_ORGANIZATION: "tastytap"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "terraform-tastytap-infra"
-  CONFIG_DIRECTORY: "./infra"
+  CONFIG_DIRECTORY: "./"
 
 jobs:
   plan:
