test plan + apply

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,7 +1,10 @@
-name: "Terraform Plan" #teste
+name: "Terraform Plan"
 
 on:
   pull_request:
+    branches:
+      - main
+  push:
     branches:
       - main
 
