remove alb resources + fix workflow

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -2,6 +2,10 @@ name: "Terraform Plan"
 
 on:
   pull_request:
+    branches:
+      - main
+    paths:
+      - 'infra/**'
 
 env:
   TF_CLOUD_ORGANIZATION: "tastytap"
